--- a/src/component/navbar2/Navbar2.scss
+++ b/src/component/navbar2/Navbar2.scss
@@ -65,7 +65,7 @@
   .Navbar {
     display: flex;
     flex-direction: row;
-    max-width: 95vw;
+    width: 100vw;
     height: 73px;
     background-color: #3f3d56;
     color: white;
