--- a/src/component/home/Home.scss
+++ b/src/component/home/Home.scss
@@ -80,43 +80,41 @@
   .home-container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
     height: 772px;
-    flex-shrink: 0;
 
     .left {
-      // background-color: green;
-      // height: 560px;
-      // height: 100%;
-      width: 323px;
-      height: 421px;
-      flex: 1;
-      justify-content: center;
-      align-items: center;
+      display: flex;
+      margin-top: 250px;
       .intro {
-        width: 419px;
-        height: 254px;
-        align-items: flex-end;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
 
+        gap: 17px;
+        width: 323px;
+        height: 386px;
+        margin: 36px 34px 54px 34px;
         .heading {
+          // text-align: left;
           display: flex;
-          width: 385px;
-          height: 26.926px;
+          width: 323px;
+          height: 27px;
           flex-direction: column;
-          // justify-content: flex-end;
+          justify-content: flex-end;
           flex-shrink: 0;
+          color: var(--black, #2d2d2d);
+          background-color: #fff;
+          text-align: center;
+          font-family: Epilogue;
+          font-size: 20px;
+          font-style: italic;
+          font-weight: 400;
+          line-height: 30px; /* 150% */
         }
         .my-name {
-          width: 419px;
+          width: 316px;
+          text-align: left;
           h1 {
-            // color: var(--black, #2d2d2d);
-            // font-family: Epilogue;
-            // font-size: 70px;
-            // font-style: normal;
-            // font-weight: 600;
-            // line-height: 90px; /* 128.571% */
             color: var(--black, #2d2d2d);
             font-family: Epilogue;
             font-size: 70px;
@@ -126,37 +124,19 @@
           }
         }
         .desc {
-          display: flex;
-          width: 385px;
-          height: 30.421px;
-          flex-direction: column;
-          // justify-content: flex-end;
-          flex-shrink: 0;
+          width: 316px;
+          height: 60px;
           color: var(--black, #2d2d2d);
-          text-align: left;
           font-family: Epilogue;
-          font-size: 17px;
+          font-size: 19px;
           font-style: normal;
           font-weight: 400;
-          line-height: 30px; /* 176.471% */
+          line-height: 30px; /* 157.895% */
         }
       }
     }
     .right {
-      // background-color: gray;
-      flex: 1;
-      justify-content: center;
-      align-items: center;
-      // height: 560px;
-      height: 100%;
       img {
-        // margin: 65px 136px;
-        margin-top: 65px;
-        margin-bottom: 65px;
-        margin-left: 120px;
-        margin-right: 250px;
-        width: 447px;
-        height: 403px;
       }
     }
   }
