--- a/src/component/home/Home.scss
+++ b/src/component/home/Home.scss
@@ -84,12 +84,11 @@
 
     .left {
       display: flex;
-      margin-top: 250px;
+      // margin-top: 250px;
       .intro {
         display: flex;
         flex-direction: column;
-        align-items: center;
-
+        align-items: left;
         gap: 17px;
         width: 323px;
         height: 386px;
@@ -101,14 +100,11 @@
           height: 27px;
           flex-direction: column;
           justify-content: flex-end;
-          flex-shrink: 0;
           color: var(--black, #2d2d2d);
           background-color: #fff;
-          text-align: center;
+          text-align: left;
           font-family: Epilogue;
           font-size: 20px;
-          font-style: italic;
-          font-weight: 400;
           line-height: 30px; /* 150% */
         }
         .my-name {
@@ -136,7 +132,13 @@
       }
     }
     .right {
+      margin: 0px;
+
       img {
+        padding: 0px 45px 25px 45px;
+        margin: 0px;
+        width: 300px;
+        height: 271px;
       }
     }
   }
