--- a/src/component/home/Home.scss
+++ b/src/component/home/Home.scss
@@ -88,15 +88,15 @@
       .intro {
         display: flex;
         flex-direction: column;
-        align-items: left;
+        align-items: center;
         gap: 17px;
-        width: 323px;
+        width: 316px;
         height: 386px;
         margin: 36px 34px 54px 34px;
         .heading {
           // text-align: left;
           display: flex;
-          width: 323px;
+          width: 316px;
           height: 27px;
           flex-direction: column;
           justify-content: flex-end;
