--- a/src/component/home/Home.scss
+++ b/src/component/home/Home.scss
@@ -80,11 +80,12 @@
   .home-container {
     display: flex;
     flex-direction: column;
+    gap: 40px;
     height: 772px;
 
     .left {
       display: flex;
-      // margin-top: 250px;
+      margin-top: 50px;
       .intro {
         display: flex;
         flex-direction: column;
@@ -92,7 +93,7 @@
         gap: 17px;
         width: 316px;
         height: 386px;
-        margin: 36px 34px 54px 34px;
+        margin: 36px 34px 0px 34px;
         .heading {
           // text-align: left;
           display: flex;
@@ -137,8 +138,8 @@
       img {
         padding: 0px 45px 25px 45px;
         margin: 0px;
-        width: 300px;
-        height: 271px;
+        width: 350px;
+        height: 300px;
       }
     }
   }
