--- a/src/component/contact/Contact.scss
+++ b/src/component/contact/Contact.scss
@@ -3,7 +3,6 @@
   justify-content: center;
   align-items: center;
   width: 100vw;
-  //   background-color: aqua;
 
   .left {
     flex: 1;
@@ -45,15 +44,17 @@
           height: 37.42px;
         }
       }
-      img {
+      .wide-contact {
         width: 435px;
         height: 348px;
+      }
+      .mobile-contact {
+        display: none;
       }
     }
   }
   .right {
     flex: 1;
-
     margin: 131px 139px 120px 95px;
     .input {
       display: flex;
@@ -71,7 +72,6 @@
         font-size: 20px;
         font-style: normal;
         font-weight: 400;
-        // line-height: 30px; /* 150% */
       }
       textarea {
         padding: 20px 0px 0px 20px;
@@ -97,6 +97,93 @@
         line-height: 30px; /* 150% */
         border: none;
         cursor: pointer;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .contact-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100vw;
+    height: auto;
+    .left {
+      flex: 1;
+      width: 100vw;
+      height: auto;
+      padding: 0px;
+      .left-container {
+        margin: 54px 45px 0px 45px;
+        padding: 0px;
+        width: 100vw;
+        height: auto;
+        overflow-y: hidden;
+
+        .text {
+          width: 298px;
+          // height: 844px;
+          h3 {
+            color: #313131;
+            font-family: Epilogue;
+            font-size: 36.79px;
+            font-style: normal;
+            font-weight: 600;
+            line-height: 27.593px; /* 75% */
+          }
+          p {
+            display: flex;
+            width: 246.494px;
+            height: 80.019px;
+            flex-direction: column;
+            justify-content: center;
+            flex-shrink: 0;
+            color: #313131;
+            font-family: Epilogue;
+            font-size: 18.395px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 27.593px; /* 150% */
+          }
+          img {
+            display: none;
+          }
+        }
+        .wide-contact {
+          // display: none;
+          width: 254px;
+          height: 244px;
+        }
+        .mobile-contact {
+          width: 254px;
+          height: 244px;
+        }
+      }
+    }
+    .right {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+
+      .input {
+        width: 390px;
+        // height: 844px;
+
+        flex-shrink: 0;
+        input {
+          width: 303.62px;
+          height: 43.107px;
+        }
+        textarea {
+          width: 303.62px;
+          height: 99.957px;
+        }
+        button {
+          width: 124.947px;
+          height: 43.107px;
+        }
       }
     }
   }
