--- a/src/component/navbar2/Navbar2.scss
+++ b/src/component/navbar2/Navbar2.scss
@@ -103,7 +103,7 @@
       flex: 1;
       display: flex;
       align-items: center;
-      gap: 24px;
+      // gap: 24px;
       position: relative;
       color: #fff;
       text-align: center;
@@ -112,7 +112,7 @@
       font-style: normal;
       font-weight: 500;
       line-height: 30px; /* 150% */
-      margin: 16px 20px 16px 140px;
+      margin: 16px 0px 16px 140px;
       .user {
         display: flex;
         align-items: center;
