--- a/src/component/reviews/Review.scss
+++ b/src/component/reviews/Review.scss
@@ -20,3 +20,23 @@
     gap: 110px;
   }
 }
+
+@media screen and (max-width: 480px) {
+  .review-container {
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    // padding: auto;
+    padding: 5px 0px;
+
+    .heading {
+      padding: 40px 0px 0px 0px;
+      margin-bottom: 50px;
+    }
+    .review-body {
+      display: flex;
+      flex-direction: column;
+      padding: 20px 0px 100px 0px;
+    }
+  }
+}
