--- a/src/component/work/Work.scss
+++ b/src/component/work/Work.scss
@@ -18,8 +18,7 @@
     // width: 250px;
     height: 367px;
     gap: 46px 180px;
-
-    width: 100%;
+    width: 80%;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -31,7 +30,7 @@
 
 @media screen and (max-width: 480px) {
   .work-container {
-    width: 100%;
+    width: 100vw;
     height: 1000px;
     overflow-y: scroll;
     .heading {
