--- a/src/component/navbar/Navbar.scss
+++ b/src/component/navbar/Navbar.scss
@@ -140,7 +140,7 @@
           .options {
             position: absolute;
             top: 50px;
-            right: 0;
+            right: 0px;
             padding: 20px;
             background-color: #3f3d56;
             border-radius: 10px;
