--- a/src/component/services/Services.scss
+++ b/src/component/services/Services.scss
@@ -59,10 +59,11 @@
     align-items: center;
     width: 100vw;
     .upper {
-      background-color: transparent;
+      background-color: lightgray;
       display: flex;
       gap: 42px;
-      width: 273px;
+      // width: 273px;
+      width: 100%;
       height: 150px;
       img {
         width: 50px;
@@ -74,15 +75,17 @@
       display: flex;
       flex-direction: column;
       height: auto;
-      padding: 0px 130px 70px 130px;
+      align-items: center;
+      padding-bottom: 70px;
       justify-content: center;
       align-items: center;
       gap: 0px;
-      margin: 0px;
+      margin: 0px 0px;
+      width: 100%;
 
       .service {
         // margin: 47px 112px;
-        background-color: red;
+        // background-color: red;
         width: 165px;
         height: 165px;
         // flex-shrink: 0;
