--- a/src/component/home/Home.scss
+++ b/src/component/home/Home.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   width: 100vw;
-  height: 86vh;
+  // height: 86vh;
 
   .left {
     // background-color: green;
