--- a/src/component/contact/Contact.scss
+++ b/src/component/contact/Contact.scss
@@ -60,6 +60,7 @@
       display: flex;
       flex-direction: column;
       gap: 34px;
+      margin: 5px;
 
       input {
         padding-left: 20px;
