--- a/src/component/services/Services.scss
+++ b/src/component/services/Services.scss
@@ -10,7 +10,7 @@
     align-items: center;
     gap: 122px;
     padding: 28px 0px;
-    // background-color: rgb(243, 243, 243);
+    background-color: rgb(239, 239, 239);
     img {
       width: 60px;
       height: 60px;
@@ -59,7 +59,7 @@
     align-items: center;
     width: 100vw;
     .upper {
-      background-color: lightgray;
+      background-color: rgb(239, 239, 239);
       display: flex;
       gap: 42px;
       // width: 273px;
