--- a/src/component/footer/Footer.scss
+++ b/src/component/footer/Footer.scss
@@ -56,7 +56,7 @@
         color: #313131;
       }
       &:hover img {
-        box-shadow: rgba(2, 116, 230, 0.2) 0px 8px 24px;
+        // box-shadow: rgba(2, 116, 230, 0.2) 0px 8px 24px;
       }
     }
     .bottom {
