--- a/src/component/services/Services.scss
+++ b/src/component/services/Services.scss
@@ -42,7 +42,7 @@
       }
       h3 {
         padding: 16px 0px;
-        color: var(--black, #2d2d2d);
+        color: var(--white, #2d2d2d);
         text-align: center;
         font-family: Epilogue;
         font-size: 24px;
@@ -96,7 +96,7 @@
         margin-bottom: 0px;
       }
       h3 {
-        color: var(--black, #2d2d2d);
+        color: var(--white, #2d2d2d);
         text-align: center;
         font-family: Epilogue;
         font-size: 24px;
