--- a/src/component/home/Home.scss
+++ b/src/component/home/Home.scss
@@ -1,3 +1,153 @@
+// .home-container {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   width: 100vw;
+//   // height: 86vh;
+
+//   .left {
+//     // background-color: green;
+//     // height: 560px;
+//     height: 100%;
+//     flex: 1;
+//     justify-content: center;
+//     align-items: center;
+//     .intro {
+//       width: 419px;
+//       height: 254px;
+//       align-items: flex-end;
+//       margin-top: 150px;
+//       margin-bottom: 150px;
+//       margin-left: 250px;
+//       margin-right: 150px;
+
+//       .heading {
+//         display: flex;
+//         width: 385px;
+//         height: 26.926px;
+//         flex-direction: column;
+//         // justify-content: flex-end;
+//         flex-shrink: 0;
+//       }
+//       .my-name {
+//         width: 419px;
+//         h1 {
+//           color: var(--black, #2d2d2d);
+//           font-family: Epilogue;
+//           font-size: 70px;
+//           font-style: normal;
+//           font-weight: 600;
+//           line-height: 90px; /* 128.571% */
+//         }
+//       }
+//       .desc {
+//         display: flex;
+//         width: 385px;
+//         height: 30.421px;
+//         flex-direction: column;
+//         // justify-content: flex-end;
+//         flex-shrink: 0;
+//         color: var(--black, #2d2d2d);
+//         text-align: left;
+//         font-family: Epilogue;
+//         font-size: 17px;
+//         font-style: normal;
+//         font-weight: 400;
+//         line-height: 30px; /* 176.471% */
+//       }
+//     }
+//   }
+//   .right {
+//     // background-color: gray;
+//     flex: 1;
+//     justify-content: center;
+//     align-items: center;
+//     // height: 560px;
+//     height: 100%;
+//     img {
+//       // margin: 65px 136px;
+//       margin-top: 65px;
+//       margin-bottom: 65px;
+//       margin-left: 120px;
+//       margin-right: 250px;
+//       width: 447px;
+//       height: 403px;
+//     }
+//   }
+// }
+
+// @media screen and (max-width: 480px) {
+//   .home-container {
+//     display: flex;
+//     flex-direction: column;
+//     gap: 40px;
+//     height: 772px;
+
+//     .left {
+//       display: flex;
+//       margin-top: 50px;
+//       .intro {
+//         display: flex;
+//         flex-direction: column;
+//         align-items: center;
+//         gap: 17px;
+//         width: 316px;
+//         height: 386px;
+//         margin: 36px 34px 0px 34px;
+//         .heading {
+//           // text-align: left;
+//           display: flex;
+//           width: 316px;
+//           height: 27px;
+//           flex-direction: column;
+//           justify-content: flex-end;
+//           color: var(--black, #2d2d2d);
+//           background-color: #fff;
+//           text-align: left;
+//           font-family: Epilogue;
+//           font-size: 20px;
+//           line-height: 30px; /* 150% */
+//         }
+//         .my-name {
+//           width: 316px;
+//           text-align: left;
+//           h1 {
+//             color: var(--black, #2d2d2d);
+//             font-family: Epilogue;
+//             font-size: 70px;
+//             font-style: normal;
+//             font-weight: 600;
+//             line-height: 90px; /* 128.571% */
+//           }
+//         }
+//         .desc {
+//           width: 316px;
+//           height: 60px;
+//           color: var(--black, #2d2d2d);
+//           font-family: Epilogue;
+//           font-size: 19px;
+//           font-style: normal;
+//           font-weight: 400;
+//           line-height: 30px; /* 157.895% */
+//         }
+//       }
+//     }
+//     .right {
+//       margin: 0px;
+
+//       img {
+//         padding: 0px 45px 25px 45px;
+//         margin: 0px;
+//         width: 350px;
+//         height: 300px;
+//       }
+//     }
+//   }
+// }
+
+
+
+
 .home-container {
   display: flex;
   justify-content: center;
@@ -13,7 +163,10 @@
     justify-content: center;
     align-items: center;
     .intro {
-      width: 419px;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      max-width: 419px;
       height: 254px;
       align-items: flex-end;
       margin-top: 150px;
@@ -59,19 +212,25 @@
   }
   .right {
     // background-color: gray;
+    // width: 50%;
+    // max-width: ;
     flex: 1;
     justify-content: center;
     align-items: center;
     // height: 560px;
     height: 100%;
+    width: 50%;
     img {
       // margin: 65px 136px;
-      margin-top: 65px;
-      margin-bottom: 65px;
-      margin-left: 120px;
-      margin-right: 250px;
-      width: 447px;
-      height: 403px;
+      // margin-top: 65px;
+      // margin-bottom: 65px;
+      // margin-left: 120px;
+      // margin-right: 250px;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 350px;
+      max-width: 400px;
     }
   }
 }
@@ -85,13 +244,14 @@
 
     .left {
       display: flex;
-      margin-top: 50px;
+      margin-top: -7px;
+      width: 285px;
       .intro {
         display: flex;
         flex-direction: column;
         align-items: center;
         gap: 17px;
-        width: 316px;
+        width: 285px;
         height: 386px;
         margin: 36px 34px 0px 34px;
         .heading {
@@ -136,10 +296,11 @@
       margin: 0px;
 
       img {
-        padding: 0px 45px 25px 45px;
-        margin: 0px;
-        width: 350px;
-        height: 300px;
+        padding: 41px 0px 0px 0px;
+
+        margin: -61px;
+        width: 285px;
+        height: 273px;
       }
     }
   }
