--- a/src/component/contact/Contact.scss
+++ b/src/component/contact/Contact.scss
@@ -1,3 +1,207 @@
+// .contact-container {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   width: 100vw;
+
+//   .left {
+//     flex: 1;
+
+//     .left-container {
+//       width: 432px;
+//       height: 533px;
+//       //   top right bottom left
+//       margin: 94px 175px 94px 112px;
+//       .text {
+//         display: flex;
+//         flex-direction: column;
+//         gap: 20px;
+//         h3 {
+//           color: #313131;
+//           font-family: Epilogue;
+//           font-size: 53.457px;
+//           font-style: normal;
+//           font-weight: 600;
+//           line-height: 40.093px; /* 75% */
+//         }
+//         p {
+//           display: flex;
+//           width: 358.16px;
+//           height: 116.269px;
+//           flex-direction: column;
+//           justify-content: center;
+//           flex-shrink: 0;
+//           color: #313131;
+//           font-family: Epilogue;
+//           font-size: 26.728px;
+//           font-style: normal;
+//           font-weight: 400;
+//           line-height: 40.093px; /* 150% */
+//         }
+//         img {
+//           margin-top: 5px;
+//           width: 37.42px;
+//           height: 37.42px;
+//         }
+//       }
+//       .wide-contact {
+//         width: 435px;
+//         height: 348px;
+//       }
+//       .mobile-contact {
+//         display: none;
+//       }
+//     }
+//   }
+//   .right {
+//     flex: 1;
+//     margin: 131px 139px 120px 95px;
+//     .input {
+//       display: flex;
+//       flex-direction: column;
+//       gap: 34px;
+//       margin: 5px;
+
+//       input {
+//         padding-left: 20px;
+//         color: var(--black, #2d2d2d);
+//         width: 486px;
+//         height: 69px;
+//         background: #e7e5df;
+//         border: none;
+//         font-family: Epilogue;
+//         font-size: 20px;
+//         font-style: normal;
+//         font-weight: 400;
+//       }
+//       textarea {
+//         padding: 20px 0px 0px 20px;
+//         color: var(--black, #2d2d2d);
+//         font-family: Epilogue;
+//         font-size: 20px;
+//         font-style: normal;
+//         font-weight: 400;
+//         line-height: 30px; /* 150% */
+//         width: 486px;
+//         height: 160px;
+//         background: #e7e5df;
+//         border: none;
+//       }
+//       button {
+//         color: white;
+//         width: 200px;
+//         height: 69px;
+//         background: #2d2d2d;
+//         font-family: Epilogue;
+//         font-size: 20px;
+//         font-weight: 400;
+//         line-height: 30px; /* 150% */
+//         border: none;
+//         cursor: pointer;
+//       }
+//     }
+//   }
+// }
+
+// @media screen and (max-width: 480px) {
+//   .contact-container {
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     flex-direction: column;
+//     width: 100vw;
+//     height: auto;
+//     .left {
+//       flex: 1;
+//       width: 100vw;
+//       height: auto;
+//       padding: 0px;
+//       .left-container {
+//         margin: 54px 45px 0px 45px;
+//         padding: 0px;
+//         width: 100vw;
+//         height: auto;
+//         overflow-y: hidden;
+
+//         .text {
+//           width: 298px;
+//           // height: 844px;
+//           h3 {
+//             color: #313131;
+//             font-family: Epilogue;
+//             font-size: 36.79px;
+//             font-style: normal;
+//             font-weight: 600;
+//             line-height: 27.593px; /* 75% */
+//           }
+//           p {
+//             display: flex;
+//             width: 246.494px;
+//             height: 80.019px;
+//             flex-direction: column;
+//             justify-content: center;
+//             flex-shrink: 0;
+//             color: #313131;
+//             font-family: Epilogue;
+//             font-size: 18.395px;
+//             font-style: normal;
+//             font-weight: 400;
+//             line-height: 27.593px; /* 150% */
+//           }
+//           img {
+//             display: none;
+//           }
+//         }
+//         .wide-contact {
+//           // display: none;
+//           width: 254px;
+//           height: 244px;
+//         }
+//         .mobile-contact {
+//           width: 254px;
+//           height: 244px;
+//         }
+//       }
+//     }
+//     .right {
+//       flex: 1;
+//       display: flex;
+//       flex-direction: column;
+//       margin-top: 40px;
+//       margin-bottom: 20px;
+//       margin-right: 0px;
+//       margin-left: 0px;
+
+//       .input {
+//         width: 390px;
+//         display: flex;
+//         flex-direction: column;
+//         // justify-content: center;
+//         align-items: center;
+//         gap: 20px;
+//         // height: 844px;
+
+//         flex-shrink: 0;
+//         input {
+//           width: 350px;
+//           height: 45px;
+//         }
+//         textarea {
+//           width: 350px;
+//           height: 100px;
+//         }
+//         button {
+//           padding: 15px;
+//           // width: 350px;
+//           // height: 43.107px;
+//         }
+//       }
+//     }
+//   }
+// }
+
+
+
 .contact-container {
   display: flex;
   justify-content: center;
@@ -117,9 +321,9 @@
       height: auto;
       padding: 0px;
       .left-container {
-        margin: 54px 45px 0px 45px;
-        padding: 0px;
-        width: 100vw;
+        margin: 54px 0px 0px 0px;
+        padding: 10px;
+        width: 90%;
         height: auto;
         overflow-y: hidden;
 
@@ -154,8 +358,11 @@
         }
         .wide-contact {
           // display: none;
-          width: 254px;
+          width: 90%;
           height: 244px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
         }
         .mobile-contact {
           width: 254px;
