--- a/src/component/services/Services.scss
+++ b/src/component/services/Services.scss
@@ -93,7 +93,7 @@
           width: 130px;
           height: 130px;
         }
-        margin-bottom: 0px;
+        // margin-bottom: 0px;
       }
       h3 {
         color: var(--white, #ffffff);
